--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -27,4 +27,9 @@ reference:
   - TTUProject
 - title: "Methods"
 - contents:
+  - author-TTUProject
   - author-TTUReports
+  - exhibit-TTUProject
+  - investigate-TTUProject
+  - renew-TTUProject
+  - share-TTUProject
