--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,23 +11,39 @@ exportClasses(TTUProject)
 exportClasses(TTUReports)
 exportClasses(TTUSynopsis)
 exportMethods(author)
+exportMethods(exhibit)
+exportMethods(investigate)
+exportMethods(renew)
+exportMethods(share)
 import(methods)
 import(ready4)
 import(specific)
+importFrom(Hmisc,capitalize)
+importFrom(R.utils,copyDirectory)
 importFrom(dplyr,mutate)
 importFrom(ggplot2,ggsave)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
+importFrom(methods,callNextMethod)
 importFrom(purrr,discard)
 importFrom(purrr,flatten_chr)
 importFrom(purrr,map)
 importFrom(purrr,map_chr)
+importFrom(purrr,map_lgl)
 importFrom(purrr,pluck)
 importFrom(purrr,reduce)
+importFrom(purrr,walk)
 importFrom(ready4,author)
+importFrom(ready4,exhibit)
+importFrom(ready4,investigate)
 importFrom(ready4,make_list_phrase)
+importFrom(ready4,renew)
+importFrom(ready4,share)
+importFrom(ready4,write_fls_to_dv)
 importFrom(ready4,write_with_consent)
 importFrom(ready4show,make_rmd_fl_nms_ls)
+importFrom(ready4use,Ready4useRepos)
+importFrom(rlang,exec)
 importFrom(stringr,str_locate)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_sub)
