removed ds from instrument ls

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ import(ready4)
 import(specific)
 importFrom(Hmisc,capitalize)
 importFrom(R.utils,copyDirectory)
+importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(ggplot2,ggsave)
 importFrom(lifecycle,deprecated)
