--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ exportClasses(TTUSynopsis)
 exportMethods(author)
 exportMethods(exhibit)
 exportMethods(investigate)
+exportMethods(manufacture)
+exportMethods(procure)
 exportMethods(renew)
 exportMethods(share)
 import(methods)
@@ -22,6 +24,7 @@ importFrom(Hmisc,capitalize)
 importFrom(R.utils,copyDirectory)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
+importFrom(dplyr,select)
 importFrom(ggplot2,ggsave)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
@@ -38,6 +41,8 @@ importFrom(ready4,author)
 importFrom(ready4,exhibit)
 importFrom(ready4,investigate)
 importFrom(ready4,make_list_phrase)
+importFrom(ready4,manufacture)
+importFrom(ready4,procure)
 importFrom(ready4,renew)
 importFrom(ready4,share)
 importFrom(ready4,write_fls_to_dv)
