--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -31,5 +31,7 @@ reference:
   - author-TTUReports
   - exhibit-TTUProject
   - investigate-TTUProject
+  - manufacture-TTUProject
+  - procure-TTUProject
   - renew-TTUProject
   - share-TTUProject
